--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -265,7 +265,7 @@
             <!--Картинка слева - герб-->
             <img class="ct__view-info-image" src="/static/img/regions/webp/{{ player.region.on_map_id }}.webp" alt="{{ player.region.region_name }}" onclick="window.location.href = '/region/{{ player.region.pk }}/'" style="cursor: pointer">
           </div>
-        {% if True %}
+        {% if False %}
 
           <a href="/play_market_event/" class="overview__event">
             <p class="overview__war-no event">{% trans 'Публикация в Google Play!' context "event" %}</p>
