--- a/party/templates/party/redesign/new_party.html
+++ b/party/templates/party/redesign/new_party.html
@@ -57,8 +57,8 @@
       <br>
       <span>{% trans 'Ниже представлены партии в порядке давности убывания онлайна их лидеров. Они, вероятнее всего, будут рады принять вас к себе' context "new_party" %}:</span>
     </div>
-
-    <table class="ct__js-table" style="margin-top: 3vh;">
+    <div style="overflow-x: auto;">
+      <table class="ct__js-table" style="margin-top: 3vh;">
       <tbody>
 
         <tr>
@@ -108,6 +108,7 @@
         {% endfor %}
       </tbody>
     </table>
+    </div>
     {% endif %}
 	</section>
 {% endblock %}
