правка бага перевода

--- a/gov/templates/gov/redesign/elections.html
+++ b/gov/templates/gov/redesign/elections.html
@@ -236,7 +236,7 @@
         tableContainerId: 'js-ct-table-1',
         columns: [
 			{ name: '{% trans "Аватар" context "lists" %}', className: 'j-t-image', isVisible: true },
-			{ name: '{% trans "Партия" context "lists" %}', className: 'j-t-title', isVisible: true },
+			{ name: '{% trans 'Кандидат' context "pres_elections" %}', className: 'j-t-title', isVisible: true },
 			{ name: '{% trans "Действие" context "lists" %}', className: 'j-t-action', isVisible: true },
         ],
       })
