--- a/war/templates/war/redesign/character_wars.html
+++ b/war/templates/war/redesign/character_wars.html
@@ -75,14 +75,14 @@
                             {% war_icon player war_elem|dict_key:'war'|get_class_name '' 'position: initial' %}
                             <span {% if war_elem|dict_key:'side' == 'agr' %}style="color: var(--c10two);"{% endif %}>{% trans 'Силы восстания' context "wars_list" %}</span>
                             {% else %}
-                            <img src="/static/img/regions/webp/55/{{ war_elem|dict_key:'war'|get_attr:'agr_region'|get_attr:'on_map_id' }}.png">
+                            <img src="/static/img/regions/webp/55/{{ war_elem|dict_key:'war'|get_attr:'agr_region'|get_attr:'on_map_id' }}.webp">
                             <span {% if war_elem|dict_key:'side' == 'agr' %}style="color: var(--c10two);"{% endif %}>{{ war_elem|dict_key:'war'|get_attr:'agr_region'|get_attr:'region_name' }}</span>
                             {% endif %}
                         </p>
                     </div>
                     <div class="overview__war-string">
                         <p class="overview__war-text">
-                            <img src="/static/img/regions/webp/55/{{ war_elem|dict_key:'war'|get_attr:'def_region'|get_attr:'on_map_id' }}.png">
+                            <img src="/static/img/regions/webp/55/{{ war_elem|dict_key:'war'|get_attr:'def_region'|get_attr:'on_map_id' }}.webp">
                             <span {% if war_elem|dict_key:'side' == 'def' %}style="color: var(--c10two);"{% endif %}>{{ war_elem|dict_key:'war'|get_attr:'def_region'|get_attr:'region_name' }}</span>
                         </p>
                     </div>
