--- a/bill/templates/state/redesign/drafts/explore_resources.html
+++ b/bill/templates/state/redesign/drafts/explore_resources.html
@@ -3,6 +3,7 @@
 {% load get_sum %}
 {% load has_key %}
 {% load get_key_list %}
+{% load get_mul_cash %}
 {% load l10n %}{% load i18n %}
 <!--разведка ресурсов-->
 <div class="gover__newInner ExploreResources">
@@ -82,7 +83,7 @@
                 )
 
             need_val = parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$('#explore_resources').val()+'_cap']) - parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$('#explore_resources').val()+'_has'])
-            need_sum = parseInt((need_val).toFixed(2) * 1000) * multiplier
+            need_sum = parseInt((need_val).toFixed(2) * 1000|get_mul_cash) * multiplier
             $('#explore_sum').html(numberWithSpaces(need_sum))
 
             $('#explore_res_line').show();
@@ -114,7 +115,7 @@
                 )
 
                 need_val = parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$(e.target).val()+'_cap']) - parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$(e.target).val()+'_has'])
-                need_sum = parseInt((need_val).toFixed(2) * 1000) * multiplier
+                need_sum = parseInt((need_val).toFixed(2) * 1000|get_mul_cash) * multiplier
                 $('#explore_sum').html(numberWithSpaces(need_sum))
 
                 $('#explore_res_line').show();
