--- a/bill/templates/state/redesign/drafts/explore_resources.html
+++ b/bill/templates/state/redesign/drafts/explore_resources.html
@@ -83,7 +83,7 @@
                 )
 
             need_val = parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$('#explore_resources').val()+'_cap']) - parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$('#explore_resources').val()+'_has'])
-            need_sum = parseInt((need_val).toFixed(2) * 1000|get_mul_cash) * multiplier
+            need_sum = parseInt((need_val).toFixed(2) * {% localize off %}{{ 1000|get_mul_cash }}{% endlocalize %}) * multiplier
             $('#explore_sum').html(numberWithSpaces(need_sum))
 
             $('#explore_res_line').show();
@@ -115,7 +115,7 @@
                 )
 
                 need_val = parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$(e.target).val()+'_cap']) - parseFloat(total_stocks[document.getElementById('explore_resources_default_region').dataset.value][$(e.target).val()+'_has'])
-                need_sum = parseInt((need_val).toFixed(2) * 1000|get_mul_cash) * multiplier
+                need_sum = parseInt((need_val).toFixed(2) * {% localize off %}{{ 1000|get_mul_cash }}{% endlocalize %}) * multiplier
                 $('#explore_sum').html(numberWithSpaces(need_sum))
 
                 $('#explore_res_line').show();
