--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -9050,7 +9050,7 @@ p.overview__love-stat-timer {
 
 .box__altItemGrid {
 	display: flex;
-	justify-content: space-between;
+    justify-content: center;
 	gap: 6rem;
 }
 
